--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ready",
-  "homepage": "https://rasulovelyorbek.github.io/rustrak/",
+  "homepage": "https://rasulovelyorbek.github.io/rus/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
